--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: llmops-app
-        image: dataguru97/studybuddy:v17
+        image: deep1305/studybuddy:latest
         ports:
         - containerPort: 8501
         env:
