--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: llmops-app
-        image: deep1305/studybuddy:latest
+        image: deep1305/studybuddy:v3
         ports:
         - containerPort: 8501
         env:
