--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,7 @@ argocd
 argocd.exe
 *.sha256
 
+
 ### Local kubeconfig exports / temp files
 kubeconfig-ci.yaml
 ~WRL*.tmp
@@ -76,3 +77,5 @@ FULL_DOCUMENTATION.md
 ~$nkins_Argo_Webhooks_Setup_on_GCP.docx
 ~WRL0003.tmp
 Jenkins_Argo_Webhooks_Setup_on_GCP.docx
+
+study_buddy_ai.egg-info/
